# SLAM_Basic_Lecture

./: .gitignore  README.md
Lec_03/: .~第三讲：李群与李代数.pptx  code.rar
Lec_03/code/: CMakeLists.txt  draw_trajectory.cpp
Lec_04/: code.rar  第四讲：相机模型与非线性优化.pptx
Lec_04/code/: CMakeLists.txt
Lec_04/code/src/: disparity.cpp  gaussnewton.cpp  undistort_image.cpp
Lec_05/: code.rar
Lec_05/code/: .gitignore  CMakeLists.txt
Lec_05/code/src/: E2Rt.cpp  GN-BA.cpp  PA5  computeORB.cpp
Lec_06/: code.rar
Lec_06/code/: Answer  CMakeLists.txt
Lec_06/code/src/: direct_method.cpp  optical_flow.cpp
Lec_07/: code.rar
Lec_07/HW1/: CMakeLists.txt
Lec_07/code/: ANSWER  CMakeLists.txt
Lec_07/code/cmake_modules/: FindCSparse.cmake
Lec_07/code/src/: directBA.cpp
